--- a/summary.html
+++ b/summary.html
@@ -1,160 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bogo Relief Summary</title>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bogo Relief Dashboard</title>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBWt99TXD-yWrlDuU6TPEZVMPrDQGV3Y-w",
-      authDomain: "emergency-response-927b4.firebaseapp.com",
-      projectId: "emergency-response-927b4",
-      storageBucket: "emergency-response-927b4.appspot.com",
-      messagingSenderId: "764143976759",
-      appId: "1:764143976759:web:340b2fa2834b6406439ab2",
-      measurementId: "G-Z0479KDD64",
-      databaseURL: "https://emergency-response-927b4-default-rtdb.firebaseio.com"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyBWt99TXD-yWrlDuU6TPEZVMPrDQGV3Y-w",
+  authDomain: "emergency-response-927b4.firebaseapp.com",
+  projectId: "emergency-response-927b4",
+  storageBucket: "emergency-response-927b4.appspot.com",
+  messagingSenderId: "764143976759",
+  appId: "1:764143976759:web:340b2fa2834b6406439ab2",
+  measurementId: "G-Z0479KDD64",
+  databaseURL: "https://emergency-response-927b4-default-rtdb.firebaseio.com"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-    let allRequests = [];
+let allRequests = [];
 
-    // Load requests from Firebase
-    const requestsRef = ref(db, "requests");
-    onValue(requestsRef, (snapshot) => {
-      allRequests = [];
-      snapshot.forEach(child => {
-        allRequests.push(child.val());
-      });
-      populateBarangayFilter();
-      renderTable(allRequests);
-    });
+const tbody = document.querySelector("#summaryTable tbody");
+const sortSelect = document.getElementById("sortBy");
+const barangaySelect = document.getElementById("filterBarangay");
 
-    function renderTable(data) {
-      const tbody = document.querySelector("#summaryTable tbody");
-      tbody.innerHTML = "";
-      data.forEach(d => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${d.name}</td>
-          <td>${d.municipality}</td>
-          <td>${d.barangay}</td>
-          <td>${d.status}</td>
-          <td>${d.supplies}</td>
-        `;
-        tbody.appendChild(row);
-      });
-    }
+// Load requests
+const requestsRef = ref(db, "requests");
+onValue(requestsRef, snapshot => {
+  allRequests = [];
+  snapshot.forEach(child => allRequests.push(child.val()));
+  populateBarangayFilter();
+  updateSummaryCards();
+  applyFilters();
+});
 
-    function populateBarangayFilter() {
-      const barangaySelect = document.getElementById("filterBarangay");
-      const barangays = [...new Set(allRequests.map(r => r.barangay))].sort();
-      barangaySelect.innerHTML = '<option value="">-- All Barangays --</option>';
-      barangays.forEach(b => {
-        const option = document.createElement("option");
-        option.value = b;
-        option.textContent = b;
-        barangaySelect.appendChild(option);
-      });
-    }
+function populateBarangayFilter() {
+  const barangays = [...new Set(allRequests.map(r => r.barangay))].sort();
+  barangaySelect.innerHTML = '<option value="">-- All Barangays --</option>';
+  barangays.forEach(b => {
+    const option = document.createElement("option");
+    option.value = b;
+    option.textContent = b;
+    barangaySelect.appendChild(option);
+  });
+}
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const sortSelect = document.getElementById("sortBy");
-      const barangaySelect = document.getElementById("filterBarangay");
+function applyFilters() {
+  let filtered = [...allRequests];
+  const sortKey = sortSelect.value;
+  const barangayFilter = barangaySelect.value;
 
-      function applyFilters() {
-        let filtered = [...allRequests];
-        const sortKey = sortSelect.value;
-        const barangayFilter = barangaySelect.value;
+  if (barangayFilter) filtered = filtered.filter(r => r.barangay === barangayFilter);
+  if (sortKey) filtered.sort((a, b) => a[sortKey].localeCompare(b[sortKey]));
+  renderTable(filtered);
+}
 
-        if (barangayFilter) {
-          filtered = filtered.filter(r => r.barangay === barangayFilter);
-        }
-        if (sortKey) {
-          filtered.sort((a, b) => a[sortKey].localeCompare(b[sortKey]));
-        }
-        renderTable(filtered);
-      }
+function renderTable(data) {
+  tbody.innerHTML = "";
+  if (data.length === 0) {
+    tbody.innerHTML = `<tr><td colspan="6" style="text-align:center;">No requests found</td></tr>`;
+    return;
+  }
+  data.forEach(d => {
+    const statusColor = d.status === "Completed" ? "green" : d.status === "Pending" ? "orange" : "gray";
+    const row = document.createElement("tr");
+    row.innerHTML = `
+      <td>${d.name}</td>
+      <td>${d.municipality}</td>
+      <td>${d.barangay}</td>
+      <td>${d.landmark || '-'}</td>
+      <td><span class="status-badge" style="background:${statusColor}">${d.status}</span></td>
+      <td>${d.supplies}</td>
+    `;
+    tbody.appendChild(row);
+  });
+}
 
-      sortSelect.addEventListener("change", applyFilters);
-      barangaySelect.addEventListener("change", applyFilters);
+function updateSummaryCards() {
+  const total = allRequests.length;
+  const completed = allRequests.filter(r => r.status === "Completed").length;
+  const pending = allRequests.filter(r => r.status === "Pending").length;
+  const other = total - completed - pending;
 
-      // Export to Excel (CSV)
-      document.getElementById("exportExcel").addEventListener("click", () => {
-        const currentRows = document.querySelectorAll("#summaryTable tbody tr");
-        if (currentRows.length === 0) return alert("No data to export");
+  document.getElementById("totalRequests").textContent = total;
+  document.getElementById("completedRequests").textContent = completed;
+  document.getElementById("pendingRequests").textContent = pending;
+  document.getElementById("otherRequests").textContent = other;
+}
 
-        let csvContent = "data:text/csv;charset=utf-8,";
-        csvContent += "Name,Municipality,Barangay,Status,Supplies\n";
+// Event listeners
+sortSelect.addEventListener("change", applyFilters);
+barangaySelect.addEventListener("change", applyFilters);
 
-        currentRows.forEach(row => {
-          const cols = Array.from(row.querySelectorAll("td")).map(td => `"${td.textContent.replace(/"/g,'""')}"`);
-          csvContent += cols.join(",") + "\n";
-        });
+document.getElementById("exportExcel").addEventListener("click", () => {
+  const currentRows = document.querySelectorAll("#summaryTable tbody tr");
+  if (currentRows.length === 0) return alert("No data to export");
 
-        const encodedUri = encodeURI(csvContent);
-        const link = document.createElement("a");
-        link.setAttribute("href", encodedUri);
-        link.setAttribute("download", "bogo_relief_summary.csv");
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-      });
-    });
-  </script>
+  let csvContent = "data:text/csv;charset=utf-8,Name,Municipality,Barangay,Landmark,Status,Supplies\n";
+  currentRows.forEach(row => {
+    const cols = Array.from(row.querySelectorAll("td")).map(td => `"${td.textContent.replace(/"/g,'""').replace(/\n/g,' ')}"`);
+    csvContent += cols.join(",") + "\n";
+  });
 
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f8f9fa; color:#333; }
-    header { background:#d63031; color:white; text-align:center; padding:20px; }
-    section { padding:20px; max-width:900px; margin:auto; }
-    .card { background:white; padding:20px; border-radius:10px; margin-bottom:20px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-    table { width:100%; border-collapse:collapse; margin-top:10px; }
-    th, td { padding:10px; border:1px solid #ccc; text-align:left; }
-    select, button { padding:8px; margin:10px 5px 10px 0; border-radius:5px; border:1px solid #ccc; font-size:14px; }
-    button { background:#d63031; color:white; border:none; cursor:pointer; }
-    button:hover { background:#b02a2a; }
-  </style>
+  const link = document.createElement("a");
+  link.setAttribute("href", encodeURI(csvContent));
+  link.setAttribute("download", "bogo_relief_summary.csv");
+  document.body.appendChild(link);
+  link.click();
+  document.body.removeChild(link);
+});
+</script>
+
+<style>
+body { font-family: Arial, sans-serif; margin:0; background:#f8f9fa; color:#333; }
+header { background:#d63031; color:white; text-align:center; padding:20px; }
+section { padding:20px; max-width:1200px; margin:auto; }
+.card { background:white; padding:20px; border-radius:10px; margin-bottom:20px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
+.summary-cards { display:flex; flex-wrap:wrap; gap:20px; margin-bottom:20px; }
+.summary-card { flex:1; min-width:150px; padding:20px; background:#fff; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; }
+.summary-card h2 { margin:10px 0; font-size:24px; color:#d63031; }
+.summary-card p { margin:0; font-weight:bold; font-size:14px; color:#555; }
+table { width:100%; border-collapse:collapse; margin-top:10px; }
+th, td { padding:10px; border:1px solid #ccc; text-align:left; }
+tr:nth-child(even) { background:#f1f1f1; }
+tr:hover { background:#ffe6e6; }
+.status-badge { color:white; padding:3px 8px; border-radius:5px; font-weight:bold; display:inline-block; }
+select, button { padding:8px; margin:10px 5px 10px 0; border-radius:5px; border:1px solid #ccc; font-size:14px; }
+button { background:#d63031; color:white; border:none; cursor:pointer; }
+button:hover { background:#b02a2a; }
+@media(max-width:768px){.summary-cards{flex-direction:column;}}
+</style>
 </head>
 <body>
-  <header>
-    <h1>Bogo Relief Requests Summary</h1>
-    <p>View, filter by barangay, sort, and export relief requests.</p>
-  </header>
+<header>
+  <h1>Bogo Relief Dashboard</h1>
+  <p>View requests, filter, sort, and export relief data</p>
+</header>
 
-  <section>
-    <div class="card">
-      <label for="sortBy">Sort by:</label>
-      <select id="sortBy">
-        <option value="">-- None --</option>
-        <option value="municipality">Municipality</option>
-        <option value="barangay">Barangay</option>
-      </select>
+<section>
+  <div class="summary-cards">
+    <div class="summary-card"><p>Total Requests</p><h2 id="totalRequests">0</h2></div>
+    <div class="summary-card"><p>Completed</p><h2 id="completedRequests">0</h2></div>
+    <div class="summary-card"><p>Pending</p><h2 id="pendingRequests">0</h2></div>
+    <div class="summary-card"><p>Other</p><h2 id="otherRequests">0</h2></div>
+  </div>
 
-      <label for="filterBarangay">Filter by Barangay:</label>
-      <select id="filterBarangay">
-        <option value="">-- All Barangays --</option>
-      </select>
+  <div class="card">
+    <label for="sortBy">Sort by:</label>
+    <select id="sortBy">
+      <option value="">-- None --</option>
+      <option value="municipality">Municipality</option>
+      <option value="barangay">Barangay</option>
+      <option value="landmark">Landmark</option>
+    </select>
 
-      <button id="exportExcel">Export to Excel</button>
+    <label for="filterBarangay">Filter by Barangay:</label>
+    <select id="filterBarangay">
+      <option value="">-- All Barangays --</option>
+    </select>
 
-      <table id="summaryTable">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Municipality</th>
-            <th>Barangay</th>
-            <th>Status</th>
-            <th>Supplies</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-  </section>
+    <button id="exportExcel">Export to Excel</button>
+
+    <table id="summaryTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Municipality</th>
+          <th>Barangay</th>
+          <th>Landmark</th>
+          <th>Status</th>
+          <th>Supplies</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</section>
 </body>
 </html>
