--- a/donate.html
+++ b/donate.html
@@ -3,152 +3,170 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Add Donation Driver (Admin)</title>
+<title>Bogo Relief Donation Drive</title>
 <style>
-  body { font-family: Arial, sans-serif; background:#fefefe; margin:0; padding:0; }
-  header { background:#f39c12; color:white; text-align:center; padding:40px 20px; }
-  header h1 { margin:0; font-size:2rem; }
-  section { max-width:500px; margin:40px auto; padding:20px; background:#fff3e0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1); }
-  label { display:block; margin-top:15px; font-weight:bold; }
-  input, button { width:100%; padding:10px; margin-top:5px; border-radius:5px; border:1px solid #ccc; }
-  button { background:#f39c12; color:white; font-size:16px; border:none; cursor:pointer; }
-  button:hover { background:#e67e22; }
-  .success { color:green; margin-top:15px; }
-  .error { color:red; margin-top:15px; }
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #fef9f3;
+    margin: 0;
+    padding: 0;
+  }
+
+  header {
+    background: #ff6f61;
+    color: white;
+    text-align: center;
+    padding: 40px 20px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  }
+  header h1 {
+    margin: 0;
+    font-size: 2.5rem;
+  }
+  header p {
+    font-size: 1.2rem;
+    margin-top: 5px;
+  }
+
+  section#orgList {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    max-width: 1200px;
+    margin: 30px auto;
+    padding: 0 20px;
+  }
+
+  .org-card {
+    background: #fffaf0;
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    padding: 20px;
+    text-align: center;
+    transition: transform 0.2s, box-shadow 0.2s;
+  }
+  .org-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 15px rgba(0,0,0,0.15);
+  }
+
+  .org-card h3 {
+    margin: 0;
+    color: #ff6f61;
+    font-size: 1.5rem;
+  }
+
+  .org-card p {
+    margin: 10px 0;
+    font-size: 1rem;
+    color: #333;
+  }
+
+  .gcash-number {
+    font-weight: bold;
+  }
+
+  .copy-btn {
+    margin-left: 10px;
+    padding: 6px 12px;
+    font-size: 14px;
+    cursor: pointer;
+    background: #ff6f61;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    transition: background 0.2s;
+  }
+  .copy-btn:hover {
+    background: #e6554d;
+  }
+
+  .org-card img {
+    margin-top: 15px;
+    max-width: 180px;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+  }
+
+  footer {
+    text-align: center;
+    padding: 20px;
+    background: #ff6f61;
+    color: white;
+    margin-top: 50px;
+  }
+
 </style>
 </head>
 <body>
 
 <header>
-  <h1>Add a Donation Driver (Admin Only)</h1>
+  <h1>Bogo Relief Donation Drive</h1>
+  <p>Support your chosen organization by sending your donation</p>
 </header>
 
-<section id="loginSection">
-  <p>Login as admin to add drivers:</p>
-  <input type="email" id="email" placeholder="Email" required>
-  <input type="password" id="password" placeholder="Password" required>
-  <button id="loginBtn">Login</button>
-  <p class="error" id="loginError" style="display:none;"></p>
+<section id="orgList">
+  <!-- Donation organizations will appear here -->
 </section>
 
-<section id="driverSection" style="display:none;">
-  <form id="driverForm">
-    <label for="orgName">Organization Name</label>
-    <input type="text" id="orgName" required>
+<footer>
+  &copy; 2025 Bogo Relief. Thank you for your support!
+</footer>
 
-    <label for="gcashName">GCash Name</label>
-    <input type="text" id="gcashName" required>
-
-    <label for="gcashNumber">GCash Number</label>
-    <input type="text" id="gcashNumber" required>
-
-    <label for="gcashQRFile">GCash QR Code Image</label>
-    <input type="file" id="gcashQRFile" accept="image/*" required>
-
-    <button type="submit">Save to Database</button>
-    <p class="success" id="successMsg" style="display:none;">Driver saved successfully!</p>
-    <p class="error" id="errorMsg" style="display:none;"></p>
-  </form>
-</section>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
-import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
 
+// Firebase config
 const firebaseConfig = {
-  apiKey: "AIzaSyBWt99TXD-yWrlDuU6TPEZVMPrDQGV3Y-w",
-  authDomain: "emergency-response-927b4.firebaseapp.com",
-  projectId: "emergency-response-927b4",
-  storageBucket: "emergency-response-927b4.appspot.com",
-  messagingSenderId: "764143976759",
-  appId: "1:764143976759:web:340b2fa2834b6406439ab2",
-  measurementId: "G-Z0479KDD64",
-  databaseURL: "https://emergency-response-927b4-default-rtdb.firebaseio.com"
+  apiKey: "AIzaSyCC3EzW15f74p4xe0o_lEp-reIAAFlgyo0",
+  authDomain: "gcashprivate-927ad.firebaseapp.com",
+  projectId: "gcashprivate-927ad",
+  storageBucket: "gcashprivate-927ad.appspot.com",
+  messagingSenderId: "562603814753",
+  appId: "1:562603814753:web:5b9f71008ba5dde0c4df20",
+  databaseURL: "https://gcashprivate-927ad-default-rtdb.firebaseio.com"
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
-const auth = getAuth(app);
+const secretKey = "MY_SECRET_KEY_123";
 
-// Login
-const loginSection = document.getElementById("loginSection");
-const driverSection = document.getElementById("driverSection");
-const loginBtn = document.getElementById("loginBtn");
-const loginError = document.getElementById("loginError");
+const orgListEl = document.getElementById("orgList");
 
-loginBtn.addEventListener("click", () => {
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-  loginError.style.display = "none";
+const orgRef = ref(db, "organization");
+onValue(orgRef, (snapshot) => {
+  orgListEl.innerHTML = ""; // clear previous content
+  snapshot.forEach((child) => {
+    const data = child.val();
 
-  signInWithEmailAndPassword(auth, email, password)
-    .then((userCredential) => {
-      loginSection.style.display = "none";
-      driverSection.style.display = "block";
-    })
-    .catch((error) => {
-      loginError.textContent = error.message;
-      loginError.style.display = "block";
+    const orgName = CryptoJS.AES.decrypt(data.org1, secretKey).toString(CryptoJS.enc.Utf8);
+    const gcashName = CryptoJS.AES.decrypt(data.gcashname, secretKey).toString(CryptoJS.enc.Utf8);
+    const gcashNumber = CryptoJS.AES.decrypt(data.gcashnumber, secretKey).toString(CryptoJS.enc.Utf8);
+    const qrBase64 = CryptoJS.AES.decrypt(data.gcashqr, secretKey).toString(CryptoJS.enc.Utf8);
+
+    const orgCard = document.createElement("div");
+    orgCard.classList.add("org-card");
+    orgCard.innerHTML = `
+      <h3>${orgName}</h3>
+      <p><strong>GCash Name:</strong> ${gcashName}</p>
+      <p>
+        <strong>GCash Number:</strong> <span class="gcash-number">${gcashNumber}</span>
+        <button class="copy-btn">Copy</button>
+      </p>
+      <img src="data:image/png;base64,${qrBase64}" alt="GCash QR Code">
+    `;
+
+    orgCard.querySelector(".copy-btn").addEventListener("click", () => {
+      const number = orgCard.querySelector(".gcash-number").textContent;
+      navigator.clipboard.writeText(number)
+        .then(() => alert("GCash number copied!"))
+        .catch(err => alert("Failed to copy: " + err));
     });
-});
 
-// Ensure only logged in user can access form
-onAuthStateChanged(auth, (user) => {
-  if (user) {
-    loginSection.style.display = "none";
-    driverSection.style.display = "block";
-  } else {
-    loginSection.style.display = "block";
-    driverSection.style.display = "none";
-  }
-});
-
-// Form submission
-const form = document.getElementById("driverForm");
-const successMsg = document.getElementById("successMsg");
-const errorMsg = document.getElementById("errorMsg");
-
-form.addEventListener("submit", (e) => {
-  e.preventDefault();
-  successMsg.style.display = "none";
-  errorMsg.style.display = "none";
-
-  const orgName = document.getElementById("orgName").value.trim();
-  const gcashName = document.getElementById("gcashName").value.trim();
-  const gcashNumber = document.getElementById("gcashNumber").value.trim();
-  const fileInput = document.getElementById("gcashQRFile");
-
-  if (fileInput.files.length === 0) {
-    errorMsg.textContent = "Please select a QR code image!";
-    errorMsg.style.display = "block";
-    return;
-  }
-
-  const file = fileInput.files[0];
-  const reader = new FileReader();
-  reader.onload = () => {
-    const gcashQRBase64 = reader.result.split(',')[1];
-
-    const driverData = {
-      org1: orgName,
-      gcashname: gcashName,
-      gcashnumber: gcashNumber,
-      gcashqr: gcashQRBase64
-    };
-
-    const driversRef = ref(db, "organization");
-    push(driversRef, driverData)
-      .then(() => {
-        successMsg.style.display = "block";
-        form.reset();
-      })
-      .catch((error) => {
-        errorMsg.textContent = "Error saving driver: " + error.message;
-        errorMsg.style.display = "block";
-      });
-  };
-  reader.readAsDataURL(file);
+    orgListEl.appendChild(orgCard);
+  });
 });
 </script>
 
