--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <div class="card donate-card">
         <h2>Donate Supplies / Money</h2>
         <p>Your contribution helps provide relief to families in need.</p>
-        <button onclick="alert('Redirecting to donation page...')">Donate Now</button>
+      <button onclick="window.location.href='donate.html'">Donate Now</button>
       </div>
     </div>
   </section>
