--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
 
   <footer>
     <p>&copy; 2025 Bogo Relief Initiative | Built with ❤️ for the community</p>
-    <p>Contact: <a href="mailto:logroniolenjun@gmail.com">logroniolenjun@gmail.com</a></p>
+    <p>Contact: <a href="mailto:logroniolenjun@gmail.com">Deib</a></p>
   </footer>
 </body>
 </html>
+
