--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bogo Relief Donation Drive</title>
+  <title> Earthquake Victims Request </title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
     import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
@@ -230,8 +230,7 @@
 
   <footer>
     <p>&copy; 2025 Bogo Relief Initiative | Built with ❤️ for the community</p>
-    <p>Contact: <a href="mailto:logroniolenjun@gmail.com">Deib</a></p>
+    <p>Contact: <a href="mailto:logroniolenjun@gmail.com">logroniolenjun@gmail.com</a></p>
   </footer>
 </body>
 </html>
-
