--- a/donate.html
+++ b/donate.html
@@ -158,7 +158,7 @@ onValue(orgRef, (snapshot) => {
       </p>
       <img src="data:image/png;base64,${qrBase64}" alt="GCash QR Code">
       <p>
-        <button class="receipt-btn">Send Receipt</button>
+        <button class="receipt-btn">Verify/ Send Receipt</button>
       </p>
     `;
 
@@ -186,3 +186,4 @@ onValue(orgRef, (snapshot) => {
 
 </body>
 </html>
+
