--- a/index.html
+++ b/index.html
@@ -1,237 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Earthquake Victims Request </title>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bogo Relief Dashboard</title>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBWt99TXD-yWrlDuU6TPEZVMPrDQGV3Y-w",
-      authDomain: "emergency-response-927b4.firebaseapp.com",
-      projectId: "emergency-response-927b4",
-      storageBucket: "emergency-response-927b4.appspot.com",
-      messagingSenderId: "764143976759",
-      appId: "1:764143976759:web:340b2fa2834b6406439ab2",
-      measurementId: "G-Z0479KDD64",
-      databaseURL: "https://emergency-response-927b4-default-rtdb.firebaseio.com"
-    };
+const firebaseConfig = {
+  apiKey: "AIzaSyBWt99TXD-yWrlDuU6TPEZVMPrDQGV3Y-w",
+  authDomain: "emergency-response-927b4.firebaseapp.com",
+  projectId: "emergency-response-927b4",
+  storageBucket: "emergency-response-927b4.appspot.com",
+  messagingSenderId: "764143976759",
+  appId: "1:764143976759:web:340b2fa2834b6406439ab2",
+  measurementId: "G-Z0479KDD64",
+  databaseURL: "https://emergency-response-927b4-default-rtdb.firebaseio.com"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase(app);
+const app = initializeApp(firebaseConfig);
+const db = getDatabase(app);
 
-    function populateMunicipalities(locations) {
-      const municipalitySelect = document.getElementById("municipality");
-      const barangaySelect = document.getElementById("barangay");
+let allRequests = [];
 
-      municipalitySelect.innerHTML = '<option value="">-- Select municipality --</option>';
-      Object.keys(locations).forEach(m => {
-        const option = document.createElement("option");
-        option.value = m;
-        option.textContent = m;
-        municipalitySelect.appendChild(option);
-      });
+const tbody = document.querySelector("#summaryTable tbody");
+const sortSelect = document.getElementById("sortBy");
+const barangaySelect = document.getElementById("filterBarangay");
 
-      barangaySelect.innerHTML = '<option value="">-- Select barangay --</option>';
-      barangaySelect.disabled = true;
-
-      municipalitySelect.addEventListener("change", () => {
-        const selectedMun = municipalitySelect.value;
-        barangaySelect.innerHTML = "";
-        if (!selectedMun) {
-          barangaySelect.disabled = true;
-          barangaySelect.innerHTML = '<option value="">-- Select municipality first --</option>';
-          return;
-        }
-        (locations[selectedMun] || []).forEach(b => {
-          const option = document.createElement("option");
-          option.value = b;
-          option.textContent = b;
-          barangaySelect.appendChild(option);
-        });
-        barangaySelect.disabled = false;
-      });
-    }
-
-    async function loadCebuMap() {
-      try {
-        const res = await fetch(
-          "https://raw.githubusercontent.com/flores-jacob/philippine-regions-provinces-cities-municipalities-barangays/master/philippine_provinces_cities_municipalities_and_barangays_2019v2.json"
-        );
-        const allData = await res.json();
-        let cebuData = null;
-        for (const regionKey in allData) {
-          const region = allData[regionKey];
-          if (!region.province_list) continue;
-          if (region.province_list["CEBU"]) {
-            cebuData = region.province_list["CEBU"];
-            break;
-          }
-        }
-        if (!cebuData) return console.error("Cebu province not found");
-        const locations = {};
-        if (cebuData.municipality_list) {
-          for (const mun in cebuData.municipality_list) {
-            locations[mun] = cebuData.municipality_list[mun].barangay_list || [];
-          }
-        }
-        if (cebuData.city_list) {
-          for (const city in cebuData.city_list) {
-            locations[city] = cebuData.city_list[city].barangay_list || [];
-          }
-        }
-        populateMunicipalities(locations);
-      } catch (err) {
-        console.error("Failed to load Cebu map:", err);
-      }
-    }
-
-    window.addEventListener("DOMContentLoaded", () => {
-      loadCebuMap();
-
-      const form = document.getElementById("requestForm");
-      form.addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const submitButton = form.querySelector("button");
-        submitButton.disabled = true;
-
-        const name = document.getElementById("name").value;
-        const municipality = document.getElementById("municipality").value;
-        const barangay = document.getElementById("barangay").value;
-        const landmark = document.getElementById("landmark").value;
-        const status = document.getElementById("status").value;
-        const supplies = document.getElementById("supplies").value;
-
-        if (!name || !municipality || !barangay || !landmark || !status || !supplies) {
-          alert("Please fill all fields.");
-          submitButton.disabled = false;
-          return;
-        }
-
-        try {
-          const date = new Date().toISOString().split('T')[0];
-          await push(ref(db, "requests"), { name, municipality, barangay, landmark, status, supplies, date });
-          alert("Request submitted successfully!");
-          form.reset();
-          document.getElementById("barangay").disabled = true;
-        } catch (err) {
-          alert("Failed to submit request. Please try again.");
-          console.error(err);
-        } finally {
-          submitButton.disabled = false;
-        }
-      });
+// Load requests
+const requestsRef = ref(db, "requests");
+onValue(requestsRef, snapshot => {
+  allRequests = [];
+  snapshot.forEach(child => {
+    const val = child.val();
+    allRequests.push({
+      key: child.key,
+      name: val.name || "Unknown",
+      municipality: val.municipality || "N/A",
+      barangay: val.barangay || "N/A",
+      landmark: val.landmark || "",
+      latitude: val.latitude || "",
+      longitude: val.longitude || "",
+      status: val.status || "Pending",
+      supplies: val.supplies || "-"
     });
-  </script>
+  });
+  populateBarangayFilter();
+  updateSummaryCards();
+  applyFilters();
+});
 
-  <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#fefefe; color:#333; }
-    header { 
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                  url('https://images.unsplash.com/photo-1586281380394-1dfd2e5bfffc?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDJ8fHJlbGlmZSUyMGRyaXZlfGVufDB8fHx8MTY5ODAyODQwMw&ixlib=rb-4.0.3&q=80&w=1080') center/cover no-repeat; 
-      color:white; text-align:center; padding:80px 20px;
-    }
-    header h1 { font-size:3rem; margin-bottom:10px; }
-    header p { font-size:1.2rem; margin-bottom:20px; }
-    header a { background:#f39c12; padding:15px 30px; color:white; border-radius:8px; text-decoration:none; font-weight:bold; }
+function populateBarangayFilter() {
+  const barangays = [...new Set(allRequests.map(r => r.barangay))].sort();
+  barangaySelect.innerHTML = '<option value="">-- All Barangays --</option>';
+  barangays.forEach(b => {
+    const option = document.createElement("option");
+    option.value = b;
+    option.textContent = b;
+    barangaySelect.appendChild(option);
+  });
+}
 
-    nav { background:#e74c3c; padding:10px; text-align:center; }
-    nav a { color:white; margin:0 15px; text-decoration:none; font-weight:bold; }
-    nav a:hover { text-decoration:underline; }
+function applyFilters() {
+  let filtered = [...allRequests];
+  const sortKey = sortSelect.value;
+  const barangayFilter = barangaySelect.value;
 
-    section { padding:40px 20px; max-width:1100px; margin:auto; }
-    .card { background:white; padding:25px; border-radius:10px; margin-bottom:20px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+  if (barangayFilter) filtered = filtered.filter(r => r.barangay === barangayFilter);
+  if (sortKey) filtered.sort((a, b) => (a[sortKey] || '').localeCompare(b[sortKey] || ''));
+  renderTable(filtered);
+}
 
-    input, textarea, select { width:100%; padding:12px; margin:10px 0; border:1px solid #ccc; border-radius:5px; font-size:16px; }
-    button { background:#e74c3c; color:white; padding:12px 25px; border:none; border-radius:5px; cursor:pointer; font-weight:bold; }
-    button:hover { background:#c0392b; }
+function renderTable(data) {
+  tbody.innerHTML = "";
+  if (data.length === 0) {
+    tbody.innerHTML = `<tr><td colspan="7" style="text-align:center;">No requests found</td></tr>`;
+    return;
+  }
 
-    .flex-cards { display:flex; flex-wrap:wrap; gap:20px; }
-    .flex-cards .card { flex:1; min-width:300px; }
+  data.forEach(d => {
+    const statusColor = d.status === "Completed" ? "green" : d.status === "Pending" ? "orange" : "gray";
+    const row = document.createElement("tr");
+    row.innerHTML = `
+      <td>${d.name}</td>
+      <td>${d.municipality}</td>
+      <td>${d.barangay}</td>
+      <td>${d.landmark || '-'}</td>
+      <td><span class="status-badge" style="background:${statusColor}">${d.status}</span></td>
+      <td>${d.supplies}</td>
+      <td>
+        <button class="show-map-btn" 
+          data-lat="${d.latitude}" 
+          data-lng="${d.longitude}" 
+          data-landmark="${encodeURIComponent(d.landmark)}">
+          Show in Map
+        </button>
+      </td>
+    `;
+    tbody.appendChild(row);
+  });
 
-    .donate-card { background:#f39c12; color:white; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; }
-    .donate-card button { background:#e67e22; margin-top:15px; }
+  // Add click listeners for "Show in Map"
+  document.querySelectorAll(".show-map-btn").forEach(btn => {
+    btn.addEventListener("click", () => {
+      const lat = btn.dataset.lat;
+      const lng = btn.dataset.lng;
+      const landmark = decodeURIComponent(btn.dataset.landmark);
 
-    #updatesList li { margin-bottom:15px; padding:10px; border-radius:5px; list-style:none; background:#fef3c7; }
-    #updatesList li:nth-child(even) { background:#d1fae5; }
+      if (lat && lng) {
+        window.open(`https://www.google.com/maps?q=${lat},${lng}`, "_blank");
+      } else if (landmark) {
+        window.open(`https://www.google.com/maps/search/${encodeURIComponent(landmark)}`, "_blank");
+      } else {
+        alert("No location available for this request!");
+      }
+    });
+  });
+}
 
-    footer { background:#e74c3c; color:white; text-align:center; padding:20px; margin-top:30px; }
-    footer a { color:white; text-decoration:underline; }
-  </style>
+function updateSummaryCards() {
+  const total = allRequests.length;
+  const completed = allRequests.filter(r => r.status === "Completed").length;
+  const pending = allRequests.filter(r => r.status === "Pending").length;
+  const other = total - completed - pending;
+
+  document.getElementById("totalRequests").textContent = total;
+  document.getElementById("completedRequests").textContent = completed;
+  document.getElementById("pendingRequests").textContent = pending;
+  document.getElementById("otherRequests").textContent = other;
+}
+
+// Event listeners
+sortSelect.addEventListener("change", applyFilters);
+barangaySelect.addEventListener("change", applyFilters);
+
+document.getElementById("exportExcel").addEventListener("click", () => {
+  const currentRows = document.querySelectorAll("#summaryTable tbody tr");
+  if (currentRows.length === 0) return alert("No data to export");
+
+  let csvContent = "data:text/csv;charset=utf-8,Name,Municipality,Barangay,Landmark,Status,Supplies\n";
+  currentRows.forEach(row => {
+    const cols = Array.from(row.querySelectorAll("td")).slice(0,6).map(td => `"${td.textContent.replace(/"/g,'""').replace(/\n/g,' ')}"`);
+    csvContent += cols.join(",") + "\n";
+  });
+
+  const link = document.createElement("a");
+  link.setAttribute("href", encodeURI(csvContent));
+  link.setAttribute("download", "bogo_relief_summary.csv");
+  document.body.appendChild(link);
+  link.click();
+  document.body.removeChild(link);
+});
+</script>
+
+<style>
+body { font-family: Arial, sans-serif; margin:0; background:#f8f9fa; color:#333; }
+header { background:#d63031; color:white; text-align:center; padding:20px; }
+section { padding:20px; max-width:1200px; margin:auto; }
+.card { background:white; padding:20px; border-radius:10px; margin-bottom:20px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
+.summary-cards { display:flex; flex-wrap:wrap; gap:20px; margin-bottom:20px; }
+.summary-card { flex:1; min-width:150px; padding:20px; background:#fff; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; }
+.summary-card h2 { margin:10px 0; font-size:24px; color:#d63031; }
+.summary-card p { margin:0; font-weight:bold; font-size:14px; color:#555; }
+table { width:100%; border-collapse:collapse; margin-top:10px; }
+th, td { padding:10px; border:1px solid #ccc; text-align:left; }
+tr:nth-child(even) { background:#f1f1f1; }
+tr:hover { background:#ffe6e6; }
+.status-badge { color:white; padding:3px 8px; border-radius:5px; font-weight:bold; display:inline-block; }
+select, button { padding:8px; margin:10px 5px 10px 0; border-radius:5px; border:1px solid #ccc; font-size:14px; }
+button { background:#d63031; color:white; border:none; cursor:pointer; }
+button:hover { background:#b02a2a; }
+@media(max-width:768px){.summary-cards{flex-direction:column;}}
+</style>
 </head>
 <body>
-  <header>
-    <h1>Bogo Earthquake Relief – Your Help, Their Hope</h1>
-    <p>Together, we can rebuild lives and support affected families.</p>
-    <a href="#request">Request or Donate</a>
-  </header>
+<header>
+  <h1>Bogo Relief Dashboard</h1>
+  <p>View requests, filter, sort, show location, and export relief data</p>
+</header>
 
-  <nav>
-    <a href="#request">Request Help</a>
-    <a href="#updates">Updates</a>
-    <a href="summary.html">View Summary</a>
-  </nav>
+<section>
+  <div class="summary-cards">
+    <div class="summary-card"><p>Total Requests</p><h2 id="totalRequests">0</h2></div>
+    <div class="summary-card"><p>Completed</p><h2 id="completedRequests">0</h2></div>
+    <div class="summary-card"><p>Pending</p><h2 id="pendingRequests">0</h2></div>
+    <div class="summary-card"><p>Other</p><h2 id="otherRequests">0</h2></div>
+  </div>
 
-  <!-- Request & Donate Section -->
-  <section id="request">
-    <div class="flex-cards">
-      <!-- Request Form -->
-      <div class="card">
-        <h2>Request Relief Assistance</h2>
-        <form id="requestForm">
-          <label for="name">Full Name:</label>
-          <input type="text" id="name" name="name" required>
+  <div class="card">
+    <label for="sortBy">Sort by:</label>
+    <select id="sortBy">
+      <option value="">-- None --</option>
+      <option value="municipality">Municipality</option>
+      <option value="barangay">Barangay</option>
+      <option value="landmark">Landmark</option>
+    </select>
 
-          <label for="municipality">Municipality:</label>
-          <select id="municipality" name="municipality" required>
-            <option value="">-- Loading municipalities --</option>
-          </select>
+    <label for="filterBarangay">Filter by Barangay:</label>
+    <select id="filterBarangay">
+      <option value="">-- All Barangays --</option>
+    </select>
 
-          <label for="barangay">Barangay:</label>
-          <select id="barangay" name="barangay" required disabled>
-            <option value="">-- Select municipality first --</option>
-          </select>
+    <button id="exportExcel">Export to Excel</button>
 
-          <label for="landmark">Closest Landmark:</label>
-          <input type="text" id="landmark" name="landmark" placeholder="E.g., Bogo City Hall" required>
-
-          <label for="status">Status (Safe, Injured, Needs Medical Help):</label>
-          <input type="text" id="status" name="status" required>
-
-          <label for="supplies">Requested Supplies:</label>
-          <textarea id="supplies" name="supplies" rows="4" required></textarea>
-
-          <button type="submit">Submit Request</button>
-        </form>
-      </div>
-
-      <!-- Donate Card -->
-      <div class="card donate-card">
-        <h2>Donate Supplies / Money</h2>
-        <p>Your contribution helps provide relief to families in need.</p>
-      <button onclick="window.location.href='donate.html'">Donate Now</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- Updates Section -->
-  <section id="updates">
-    <div class="card">
-      <h2>Latest Updates</h2>
-      <ul id="updatesList">
-        <li><strong>Oct 3, 2025:</strong> 120 relief packs distributed in Barangay Gairan.</li>
-        <li><strong>Oct 2, 2025:</strong> Volunteers cleared debris near Bogo City Hall.</li>
-        <li><strong>Oct 1, 2025:</strong> Power restoration underway across Bogo.</li>
-      </ul>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Bogo Relief Initiative | Built with ❤️ for the community</p>
-    <p>Contact: <a href="mailto:logroniolenjun@gmail.com">Deib</a></p>
-  </footer>
+    <table id="summaryTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Municipality</th>
+          <th>Barangay</th>
+          <th>Landmark</th>
+          <th>Status</th>
+          <th>Supplies</th>
+          <th>Map</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</section>
 </body>
 </html>
-
