--- a/summary.html
+++ b/summary.html
@@ -94,14 +94,14 @@ function renderTable(data) {
           data-lat="${d.latitude}" 
           data-lng="${d.longitude}" 
           data-landmark="${encodeURIComponent(d.landmark)}">
-          Show in Map
+          Map
         </button>
       </td>
     `;
     tbody.appendChild(row);
   });
 
-  // Add click listeners for "Show in Map"
+  // "Show in Map" action
   document.querySelectorAll(".show-map-btn").forEach(btn => {
     btn.addEventListener("click", () => {
       const lat = btn.dataset.lat;
@@ -141,7 +141,7 @@ document.getElementById("exportExcel").addEventListener("click", () => {
 
   let csvContent = "data:text/csv;charset=utf-8,Name,Municipality,Barangay,Landmark,Status,Supplies\n";
   currentRows.forEach(row => {
-    const cols = Array.from(row.querySelectorAll("td")).slice(0,6).map(td => `"${td.textContent.replace(/"/g,'""').replace(/\n/g,' ')}"`);
+    const cols = Array.from(row.querySelectorAll("td")).slice(0,6).map(td => `"${td.textContent.replace(/"/g,'""').replace(/\n/g,' ')}"`); 
     csvContent += cols.join(",") + "\n";
   });
 
@@ -156,15 +156,15 @@ document.getElementById("exportExcel").addEventListener("click", () => {
 
 <style>
 body { font-family: Arial, sans-serif; margin:0; background:#f8f9fa; color:#333; }
-header { background:#d63031; color:white; text-align:center; padding:20px; }
-header h1 { font-size:1.8rem; margin:0; }
-header p { font-size:0.95rem; margin:5px 0 0; }
+header { background:#d63031; color:white; text-align:center; padding:16px; }
+header h1 { font-size:1.6rem; margin:0; }
+header p { font-size:0.9rem; margin:5px 0 0; }
 
 section { padding:15px; max-width:1200px; margin:auto; }
 .card { background:white; padding:15px; border-radius:10px; margin-bottom:20px; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
 
 .summary-cards { display:flex; flex-wrap:wrap; gap:15px; margin-bottom:20px; }
-.summary-card { flex:1; min-width:120px; padding:15px; background:#fff; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; }
+.summary-card { flex:1; min-width:130px; padding:15px; background:#fff; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.1); text-align:center; }
 .summary-card h2 { margin:8px 0; font-size:20px; color:#d63031; }
 .summary-card p { margin:0; font-weight:bold; font-size:13px; color:#555; }
 
@@ -172,7 +172,7 @@ section { padding:15px; max-width:1200px; margin:auto; }
 .filters label { font-size:0.9rem; }
 .filters select, .filters button { flex:1; min-width:140px; padding:8px; border-radius:6px; border:1px solid #ccc; font-size:14px; }
 
-button { background:#d63031; color:white; border:none; cursor:pointer; transition:0.3s; }
+button { background:#d63031; color:white; border:none; cursor:pointer; transition:0.3s; padding:6px 10px; border-radius:6px; }
 button:hover { background:#b02a2a; }
 
 .table-container { overflow-x:auto; }
@@ -184,13 +184,14 @@ tr:hover { background:#ffe6e6; }
 .status-badge { color:white; padding:3px 8px; border-radius:5px; font-weight:bold; display:inline-block; font-size:12px; }
 
 @media(max-width:768px){
-  header h1 { font-size:1.4rem; }
-  header p { font-size:0.85rem; }
+  header h1 { font-size:1.3rem; }
+  header p { font-size:0.8rem; }
   .summary-cards { flex-direction:column; }
   .filters { flex-direction:column; align-items:stretch; }
   .filters select, .filters button { width:100%; }
   table { font-size:12px; }
   th, td { padding:6px; }
+  button { width:100%; padding:8px; margin-top:5px; }
 }
 </style>
 
@@ -210,35 +211,39 @@ tr:hover { background:#ffe6e6; }
   </div>
 
   <div class="card">
-    <label for="sortBy">Sort by:</label>
-    <select id="sortBy">
-      <option value="">-- None --</option>
-      <option value="municipality">Municipality</option>
-      <option value="barangay">Barangay</option>
-      <option value="landmark">Landmark</option>
-    </select>
+    <div class="filters">
+      <label for="sortBy">Sort by:</label>
+      <select id="sortBy">
+        <option value="">-- None --</option>
+        <option value="municipality">Municipality</option>
+        <option value="barangay">Barangay</option>
+        <option value="landmark">Landmark</option>
+      </select>
 
-    <label for="filterBarangay">Filter by Barangay:</label>
-    <select id="filterBarangay">
-      <option value="">-- All Barangays --</option>
-    </select>
+      <label for="filterBarangay">Filter by Barangay:</label>
+      <select id="filterBarangay">
+        <option value="">-- All Barangays --</option>
+      </select>
 
-    <button id="exportExcel">Export to Excel</button>
+      <button id="exportExcel">Export to Excel</button>
+    </div>
 
-    <table id="summaryTable">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Municipality</th>
-          <th>Barangay</th>
-          <th>Landmark</th>
-          <th>Status</th>
-          <th>Supplies</th>
-          <th>Map</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <div class="table-container">
+      <table id="summaryTable">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Municipality</th>
+            <th>Barangay</th>
+            <th>Landmark</th>
+            <th>Status</th>
+            <th>Supplies</th>
+            <th>Map</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </div>
 </section>
 </body>
