--- a/donate.html
+++ b/donate.html
@@ -168,7 +168,7 @@ onValue(orgRef, (snapshot) => {
       </p>
       <img src="data:image/png;base64,${qrBase64}" alt="GCash QR Code">
       <p>
-        <button class="receipt-btn">Send Receipt</button>
+        <button class="receipt-btn">Verify / Send Receipt</button>
       </p>
     `;
 
@@ -194,3 +194,4 @@ onValue(orgRef, (snapshot) => {
 
 </body>
 </html>
+
