--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 </head>
 <body>
   <header>
-    <h1>Bogo Earthquake Relief</h1>
+    <h1>Northern Cebu Earthquake Relief</h1>
     <p>Your Help, Their Hope</p>
     <a href="#request">Request or Donate</a>
   </header>
@@ -268,4 +268,5 @@
   </footer>
 </body>
 </html>
+
 
